--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "homepage": "https://github.com/holmesmainsend/just-tech-news#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
     "seed": "^0.4.4",
     "sequelize": "^6.12.0"
