--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "seed": "node seeds/index.js"
   },
@@ -30,5 +30,8 @@
     "mysql2": "^2.3.3",
     "seed": "^0.4.4",
     "sequelize": "^6.12.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5"
   }
 }
